fixed text overflow

--- a/src/stylus/main.styl
+++ b/src/stylus/main.styl
@@ -163,12 +163,15 @@ button
     gap 4px
 
 .app_title
+    display -webkit-box
+    -webkit-box-orient vertical
+    -webkit-line-clamp 2
     max-width 130px
     font-size 16px
     letter-spacing 0.2px
     // text-align center
-    text-overflow ellipsis
-    overflow-x hidden
+    // text-overflow ellipsis
+    overflow hidden
 
 .app_usage_time
     font-family Roboto_Mono, SF Mono, monospace
